# eufm_XF

./: .gitignore  .integration_branch_name  .merge_failures  .merge_success  .perplexity_sonar_credentials.json  AGENTS.md  AGENT_ECOSYSTEM.md  AGENT_ECOSYSTEM_ARCHITECTURE.md  AGENT_SCOPE_DEFINITIONS.md  AGENT_SUMMONER_ARCHITECTURE.md  ARCHITECTURAL_DESIGN.md  CLAUDE_SESSION_MEMORY.md  CODEX_BROWSER_TASK.md  DATA_INFRASTRUCTURE_MAP.md  DIAGNOSIS.md  EU FM - Implementation Blueprint.md  EU FM Project To-Do Checklist.md  EU Funds Manager (EU FM) - Technical Specification V1.0.md  FIX_PLAN.md  Horizon_Xilella.md  MISSION_CONTROL_ARCHITECTURE.md  MONITOR.md  Marko_Maganovici_summary.md  PROJECT_JOURNAL.md  PUSH_INSTRUCTIONS.md  README.md  README_FOR_NEW_SESSION.md  SUBMISSION_CHECKLIST.md  SYSTEM_STATUS_REPORT.md  Stage1_Proposal_Cline_Enhanced.md  Stage1_proposal_final_clean.md  agent_summoner.py  app.py  auth.py  auth_utils.py  claude_prompt.md  codex_monitor.py  collaboration_brief.md  collaboration_log.md  emergency_protocol.md  (+17 more)
agents/: market_intelligence_agent.py  perplexity_sonar_agent.py  research_agent_eu_regulations.py
ai_assistant/: main.py
app/: __init__.py  exceptions.py
config/: logging.py  settings.py
dashboard/: app.py
docs/: MISSION_CONTROL_BLUEPRINT.md  PERPLEXITY_STRATEGY.md  git_strategy.md  multi_agent_research.md  plan_overview.md  schema.md  sonar_research_mission_control.md  system_architecture.md  system_optimization_plan.md
eufm_assistant/: __init__.py
final_patches/: Horizon_Xilella.md.patch  project_wbs.yaml.patch  (+1 more)
logs/: codex_status  (+6 more)
(+195 files in other folders)
